[package]
authors = ["David Flemström <dflemstr@spotify.com>"]
description = "High-level bindings to Sparkey, a simple constant key/value storage library, for read-heavy systems with infrequent large bulk inserts."
homepage = "https://github.com/dflemstr/sparkey-rs"
license = "Apache-2.0"
name = "sparkey"
repository = "https://github.com/dflemstr/sparkey-rs"
version = "0.1.0"
edition = "2018"

[dependencies]
failure = "0.1.5"
libc = "0.2.53"
bytes = "0.4.12"
structopt = "0.2.15"
hex = "0.3.2"
base64 = "0.10.1"
pretty_env_logger = "0.3.0"
log = "0.4.6"

[dependencies.sparkey-sys]
path = "sparkey-sys"
version = "0.1.0"

[dev-dependencies]
tempdir = "0.3.7"

[workspace]
members = ["sparkey-sys"]
