[package]
authors = ["David Flemström <david.flemstrom@gmail.com>"]
description = "Low-level bindings to Sparkey, a simple constant key/value storage library, for read-heavy systems with infrequent large bulk inserts."
homepage = "https://github.com/dflemstr/sparkey-rs"
license = "Apache-2.0"
name = "sparkey-sys"
repository = "https://github.com/dflemstr/sparkey-rs"
version = "0.1.0"
build = "build.rs"

[build-dependencies]
gcc = "0.3.39"
